@@ -4,9 +4,6 @@
     <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
     <title>Coverage report</title>
     <link rel='stylesheet' href='style.css' type='text/css'>
-    {% if extra_css %}
-        <link rel='stylesheet' href='{{ extra_css }}' type='text/css'>
-    {% endif %}
     <script type='text/javascript' src='jquery-1.4.3.min.js'></script>
     <script type='text/javascript' src='jquery.tablesorter.min.js'></script>
     <script type='text/javascript' src='jquery.hotkeys.js'></script>
@@ -20,7 +17,7 @@
 <div id='header'>
     <div class='content'>
         <h1>Coverage report:
-            <span class='pc_cov'>{{totals.pc_covered_str}}%</span>
+            <span class='pc_cov'>67%</span>
         </h1>
         <img id='keyboard_icon' src='keybd_closed.png'>
     </div>
@@ -35,10 +32,7 @@
         <span class='key'>s</span>
         <span class='key'>m</span>
         <span class='key'>x</span>
-        {% if arcs %}
-        <span class='key'>b</span>
-        <span class='key'>p</span>
-        {% endif %}
+        
         <span class='key'>c</span> &nbsp; change column sorting
     </p>
     </div>
@@ -47,47 +41,38 @@
 <div id='index'>
     <table class='index'>
         <thead>
-            {# The title='' attr doesn't work in Safari. #}
+            
             <tr class='tablehead' title='Click to sort'>
                 <th class='name left headerSortDown shortkey_n'>Module</th>
                 <th class='shortkey_s'>statements</th>
                 <th class='shortkey_m'>missing</th>
                 <th class='shortkey_x'>excluded</th>
-                {% if arcs %}
-                <th class='shortkey_b'>branches</th>
-                <th class='shortkey_p'>partial</th>
-                {% endif %}
+                
                 <th class='right shortkey_c'>coverage</th>
             </tr>
         </thead>
-        {# HTML syntax requires thead, tfoot, tbody #}
+        
         <tfoot>
             <tr class='total'>
                 <td class='name left'>Total</td>
-                <td>{{totals.n_statements}}</td>
-                <td>{{totals.n_missing}}</td>
-                <td>{{totals.n_excluded}}</td>
-                {% if arcs %}
-                <td>{{totals.n_branches}}</td>
-                <td>{{totals.n_missing_branches}}</td>
-                {% endif %}
-                <td class='right'>{{totals.pc_covered_str}}%</td>
+                <td>3</td>
+                <td>1</td>
+                <td>0</td>
+                
+                <td class='right'>67%</td>
             </tr>
         </tfoot>
         <tbody>
-            {% for file in files %}
+            
             <tr class='file'>
-                <td class='name left'><a href='{{file.html_filename}}'>{{file.name}}</a></td>
-                <td>{{file.nums.n_statements}}</td>
-                <td>{{file.nums.n_missing}}</td>
-                <td>{{file.nums.n_excluded}}</td>
-                {% if arcs %}
-                <td>{{file.nums.n_branches}}</td>
-                <td>{{file.nums.n_missing_branches}}</td>
-                {% endif %}
-                <td class='right'>{{file.nums.pc_covered_str}}%</td>
+                <td class='name left'><a href='a.html'>a</a></td>
+                <td>3</td>
+                <td>1</td>
+                <td>0</td>
+                
+                <td class='right'>67%</td>
             </tr>
-            {% endfor %}
+            
         </tbody>
     </table>
 </div>
@@ -95,7 +80,7 @@
 <div id='footer'>
     <div class='content'>
         <p>
-            <a class='nav' href='{{__url__}}'>coverage.py v{{__version__}}</a>
+            <a class='nav' href='http://nedbatchelder.com/code/coverage/3.5a1'>coverage.py v3.5a1</a>
         </p>
     </div>
 </div>
